--- a/GC.css
+++ b/GC.css
@@ -92,9 +92,15 @@ html{
  .side-nav-list-item:hover{
     color: #121212;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 700;
     
  }
+
+ .side-nav-list-item.active {
+  font-weight: 900;
+  color: #121212;
+  text-decoration: none;
+}
 
  .gridLR{
   display: grid; 
@@ -186,21 +192,58 @@ html{
 
 }
 
+/*ALL TYPOGRAPHY*/
+
 h1{
-    font-size: 24px;
-    font-family: 'Gilroyextrabold';
+  font-family: 'Gilroyextrabold';
+  color: #121212;
+  font-size: 2rem;
+  margin-top: 1%;
+  opacity: 100%;
+
+}
+
+.big-text{
+font-size: 56px;
+margin-bottom: 1rem;
+text-transform: uppercase;
+margin: 0;
+}
+
+.grey-caps-label{
+font-size: 1rem; 
+letter-spacing: 0.5px; 
+color: #666666;
+text-transform: uppercase;
+margin: 0;
+padding-bottom: 0.5rem;
+}
+
+
+p{
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.125rem;
+  color: #666666;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Normal */
+  font-style: normal;
+
 }
 
 h2{
-    font-size: 20px;
-    font-family: 'manrope', 'sans-serif';
+  /* font-family: 'manrope', 'sans-serif'; */
+  font-size: 1.5rem;
+  color: #121212;
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Normal */
+  font-style: normal;
+
 }
 
-p{
-    font-size: 16px;
-    color: #808080;
-    font-family: 'manrope', 'sans-serif';
-}
+/*ALL TYPOGRAPHY*/
+
 
 .problem_statement{
   display: flex;
@@ -302,10 +345,11 @@ p{
 
  
 
+
  #navbar{
   padding: 2.75% 10%; /* navbar padding top and left*/
   /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
-  font-family: 'manrope', 'sans-serif';
+  font-family: "Inter Tight", sans-serif;
 
 }
 
@@ -359,6 +403,7 @@ p{
    color: #121212;
    opacity: 100%;
    font-size: 1rem;
+   margin: auto;
  
  }
  
@@ -544,8 +589,8 @@ p{
  }
 
  .cover{
-  height: 400px; 
-  margin: 64px 0 3rem 0; 
+  height: 500px; 
+  margin: 80px 0 3rem 0; 
   background-repeat: none; 
   background-size: contain;
   background-color: #f7f7f7; 
