--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ html, body {
 #navbar{
     padding: 2.75% 10%; /* navbar padding top and left*/
     /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
-    font-family: 'manrope', 'sans-serif';
+    font-family: "Inter Tight", sans-serif;
 
 }
 
@@ -101,6 +101,7 @@ html, body {
       text-decoration: none;
       color: #121212;
       opacity: 100%;
+
       
   
   }
@@ -108,6 +109,7 @@ html, body {
   .case-nav-links:hover{
       color: #4252EB;
       text-decoration: none;
+      font-weight: 800;
       
   }
   
@@ -241,8 +243,40 @@ html, body {
   font-style: normal; /* Specify font style */
 }
 
+/*Inter*/
+.inter-tight-normal {
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400; /* Normal */
+  font-style: normal;
+}
+
+.inter-tight-medium {
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500; /* Medium */
+  font-style: normal;
+}
+
+.inter-tight-bold {
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700; /* Bold */
+  font-style: normal;
+}
+
+.inter-tight-extrabold {
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800; /* Extra Bold */
+  font-style: normal;
+}
+
+/*Inter*/
 
 
+
+/*ALL TYPOGRAPHY*/
 
 h1{
     font-family: 'Gilroyextrabold';
@@ -262,32 +296,43 @@ h1{
 
 .grey-caps-label{
   font-size: 1rem; 
-  letter-spacing: 1.6px; 
+  letter-spacing: 0.5px; 
   color: #666666;
   text-transform: uppercase;
   margin: 0;
+  padding-bottom: 0.5rem;
 }
 
 
 p{
-    font-family: 'manrope', 'sans-serif';
+    /* font-family: 'manrope', 'sans-serif'; */
     font-size: 1rem;
     color: #666666;
+    font-family: "Inter Tight", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400; /* Normal */
+    font-style: normal;
 
 }
 
+/*ALL TYPOGRAPHY*/
+
 #hero{
     
-    margin: 0 10% 120px 10%;
+    margin: 0 10% 2.5rem 10%;
     padding: 12% 0 0 0;
     display: flex;
     flex-direction: column;
     gap: 4rem;
 }
 
-#companies,#footer{
+#companies{
+  padding: 32px 10%;
+}
 
-    margin: 0% 10% 120px 10%;
+#footer{
+
+    margin: 0% 10% 0 10%;
     padding: 0%;
 }
 
@@ -770,6 +815,7 @@ text {
   padding: 0.75rem;
   background-color: #f7f7f7;
   border-radius: 300px;
+  margin: auto;
 
 }
 
@@ -813,10 +859,8 @@ text {
 
 #projects{
     display: flex;
-    padding-top: 80px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 3rem;
 }
 
 .grid-container{
@@ -824,7 +868,10 @@ text {
   grid-template-columns: 1fr 1fr;
   gap: 8rem 6rem;
   align-items: start;
+  padding: 5rem 0;
 }
+
+
 
 .hero-container{
   display: grid;
@@ -1025,7 +1072,7 @@ text {
     align-items: flex-start;
     justify-content: space-between;
     gap: 48px;
-    margin-bottom: 20%;
+    margin-bottom: 64px;
     
 }
 
@@ -1034,7 +1081,7 @@ text {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 24px;
+        gap: 0.75rem;
 }
 
 
