--- a/CDSS.css
+++ b/CDSS.css
@@ -97,10 +97,10 @@ text-decoration: none;
 .cover{
   height: 500px; 
   margin: 80px 0 3rem 0; 
-  background-repeat: none; 
+  background-repeat: no-repeat; 
   background-size: cover;
   background-color: #f7f7f7; 
-  background-image: url(CDSSAssets/poster.svg); 
+  background-image: url(CDSSAssets/CDSScover.svg); 
   display: flex; 
   justify-content: center; 
   align-items: center;
