--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,9 @@ body{
     position: fixed;
     margin: 0% 10%;
 
+
 }
+
 
 /**/
 
@@ -48,8 +50,21 @@ html, body {
     padding: 2.75% 10%; /* navbar padding top and left*/
     /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) ; */
     font-family: "Inter Tight", sans-serif;
+    animation: dropDown 0.8s ease-in-out forwards;
 
 }
+
+@keyframes dropDown {
+  from {
+    top: -100px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
 
 #navbar.scrolled {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
