--- a/CDSS.css
+++ b/CDSS.css
@@ -12,6 +12,16 @@
     margin-top: 2rem;
 }
 
+.two-col-container{
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  padding: 0px;
+  animation: fadeIn 3s; 
+
+}
+
 .leftpanel{
     padding: 0px;
     height: fit-content;
