--- a/IDM.css
+++ b/IDM.css
@@ -112,6 +112,7 @@ html{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr; 
   gap: 1.5rem;
+  margin: 32px 0;
  }
  
 
@@ -215,7 +216,7 @@ font-size: 1rem;
 letter-spacing: 0.5px; 
 color: #666666;
 text-transform: uppercase;
-margin: 0;
+margin: 48px 0 0 0;
 padding-bottom: 0.5rem;
 }
 
@@ -257,11 +258,10 @@ h2{
 }
 
 .visual-display{
-  background-color: #f7f7f7;
-  margin: 24px 0;
+  margin: 48px 0;
   border-radius: 24px;
   width: 100%;
-  height: 400px; /*for now*/
+  height: auto; /*for now*/
 }
 
 .sticky_note{
